# metacontroller

./: .gitignore  README.md  babyai_env.py  gather_babyai_trajs.py  gather_pinpad_trajs.py  pyproject.toml  test_babyai_e2e.sh  train.py  train_babyai.py  train_babyai_evo_strat.py  train_babyai_onpolicy.py  train_behavior_clone_babyai.py  train_behavior_clone_pinpad.py  train_enwik8.py  train_linear_probe_pinpad.py
metacontroller/: __init__.py  metacontroller.py  metacontroller_with_binary_mapper.py  resnet.py  transformer_with_resnet.py
metacontroller/utils/: train.py
scripts/: behavior_cloning.py
tests/: test_metacontroller.py
