[project]
name = "metacontroller"
version = "0.0.1"
description = "Transformer Metacontroller"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'latent steering',
    'hierarchical reinforcement learning'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "torch>=2.5",
    "einops>=0.8.1"
]

[project.urls]
Homepage = "https://pypi.org/project/metacontroller/"
Repository = "https://github.com/lucidrains/metacontroller"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["metacontroller"]
